# rvl

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  operator.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.ntm/: rate_limits.json
.ntm/pids/: cm-rvl.pid
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
agent_ergonomics_audit/audit/regression_tests/: R-001__root_robot_triage_json.sh  R-001__root_robot_triage_json.test.sh  R-002__root_capabilities_json.sh  R-002__root_capabilities_json.test.sh  R-003__root_robot_docs_guide.sh  R-003__root_robot_docs_guide.test.sh  R-004__doctor_fix_safe_refusal.sh  R-004__doctor_fix_safe_refusal.test.sh
benches/: bakeoff.rs  runtime.rs
docs/: PLAN_RVL.md  release.md  witness.v0.schema.json
docs/perf/: bakeoff.md
scripts/: install.ps1  install.sh
scripts/perf/: large_file.md
src/: doctor.rs  lib.rs  main.rs  orchestrator.rs  paths.rs  profile.rs
src/alignment/: key_discovery.rs  key_join.rs  key_parse.rs  mod.rs  row_order.rs  shuffle.rs
src/cli/: args.rs  delimiter.rs  exit.rs  mod.rs
src/csv/: blank.rs  dialect.rs  input.rs  mod.rs  parser.rs  records.rs  sep.rs
src/diff/: coverage.rs  heap.rs  mod.rs  order.rs  tolerance.rs
src/format/: ident_human.rs  ident_json.rs  mod.rs  numbers.rs
src/normalize/: headers.rs  mod.rs  trim.rs
src/numeric/: columns.rs  missing.rs  missingness.rs  mod.rs  no_numeric.rs  parse.rs
src/orchestrator/: capsule.rs
src/output/: json.rs
src/output/human/: header.rs  mod.rs  no_real.rs  real_change.rs  refusal.rs
src/refusal/: codes.rs  details.rs  mod.rs  process.rs
src/repro/: minimize.rs
src/witness/: hash.rs  ledger.rs  mod.rs  query.rs  reader.rs  record.rs
tests/: capsule_replay.rs  cli_exit.rs  corpus_parse.rs  csv_dialect.rs  diff.rs  doctor.rs  encoding.rs  exhaustive.rs  exit_routing.rs  golden_rules.rs  headers.rs  helpers.rs  keys.rs  mod.rs  numeric_missing.rs  numeric_parsing.rs  output_golden.rs  profile_integration.rs  regression.rs  repro_minimize.rs  row_order.rs  witness.rs  witness_query.rs  witness_schema.rs
tests/fixtures/: basic_new.csv  basic_old.csv  encoding_utf32be.csv
tests/fixtures/corpus/: README.md  accounting_parentheses.csv  ambiguous_delimiter.csv  backslash_escape.csv  backslash_in_quoted_rfc.csv  blank_lines_before_header.csv  blank_records.csv  blank_records_between.csv  bom_no_trailing_newline.csv  caret_basic.csv  caret_delimiter.csv  caret_quoted.csv  control_byte_header.csv  crlf_line_endings.csv  currency_values.csv  delim_0x1f.csv  duplicate_headers.csv  empty_fields.csv  empty_header_names.csv  empty_headers.csv  encoding_utf16le.csv  excel_quoted_commas.csv  extra_fields_empty.csv  extra_fields_non_empty.csv  extra_trailing_empty_fields.csv  extra_trailing_nonempty.csv  header_only.csv  header_with_spaces.csv  hex_prefix_header.csv  invalid_quote.csv  leading_blank_lines.csv  nul_in_8k.csv  (+47 more)
(+20 files in other folders)
