[package]
name = "rvl"
version = "0.1.0"
edition = "2024"
description = "Reveal the smallest set of numeric changes that explain what actually changed."

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-csv = { version = "0.10.3", optional = true }

# Server dependencies (optional)
axum = { version = "0.8", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tempfile = { version = "3", optional = true }

[features]
simd_csv = ["simd-csv"]
server = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber", "tempfile"]

[dev-dependencies]
arrow-csv = "57.2.0"
arrow-schema = "57.2.0"
polars = { version = "0.52.0", default-features = false, features = ["csv"] }
simd-csv = "0.10.3"

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "bakeoff"
harness = false

[[bin]]
name = "rvl-server"
path = "src/bin/server.rs"
required-features = ["server"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
