[package]
name = "rvl"
version = "0.1.1"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Reveal the smallest set of numeric changes that explain what actually changed."
license = "MIT"
repository = "https://github.com/cmdrvl/rvl"
readme = "README.md"
keywords = ["csv", "diff", "reconciliation", "cli", "numeric"]
categories = ["command-line-utilities"]

[[bin]]
name = "rvl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-csv = { version = "0.10.3", optional = true }

[features]
simd_csv = ["simd-csv"]

[dev-dependencies]
arrow-csv = "57.2.0"
arrow-schema = "57.2.0"
polars = { version = "0.52.0", default-features = false, features = ["csv"] }
simd-csv = "0.10.3"

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "bakeoff"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
